--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,6 +2,7 @@ data:
   data_root: "./data"                # Root directory for data
   alignment_strength: 0.5            # Initial alignment strength
   num_neighbors: 10                  # Number of neighbors in data preprocessing
+  batch_size: 1024                     # Batch size for training
 
 model:
   num_properties: 1                       # Number of input properties for the model
