adding pre-train loading

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,6 +15,7 @@ model:
 training:
   pretrain: true
   pretrain_epochs: 10
+  load_pretrained: false
   pretrain_learning_rate: 0.001
   train_epochs: 10
   train_learning_rate: 0.001
