--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 data:
   data_root: "./data"                # Root directory for data
-  alignment_strength: high            # low/med/high
+  alignment_strength: "high"            # low/med/high
   num_neighbors: 10                  # Number of neighbors
   batch_size: 1024                     # Batch size for training
 
